--- a/playbooks/helios-agent-ubuntu.yml
+++ b/playbooks/helios-agent-ubuntu.yml
@@ -13,6 +13,6 @@
   roles:
     - { role: run-before, period: daily }
     # nginx image should be identical to that in roles/helios/vars/main.yml => helios.docker.nginx.image
-    - { role: docker, when: periodic, pull: [ evgenyg/echo, 'nginx:1.7.9' ]}
+    - { role: docker, when: periodic, pull: [ 'evgenyg/echo:latest', 'nginx:1.7.9' ]}
     - { role: helios, helios_role: agent }
     - run-after
