--- a/playbooks/roles/helios/tasks/verify-helios.yml
+++ b/playbooks/roles/helios/tasks/verify-helios.yml
@@ -36,8 +36,7 @@
           expect: [ 'Undeploying {{ helios.docker.nginx.job }}:', '{{ agent }}: done' ]}
       - { run:    '{{ helios_command }} deploy "{{ helios.docker.nginx.job }}" "{{ agent }}"',
           expect: [ 'Deploying Deployment{jobId={{ helios.docker.nginx.job }}:', 'on [{{ agent }}]', '{{ agent }}: done' ]}
-      - { run:    'sleep 15 && echo OK',
-          expect: OK }
+      - { run:    'sleep 15' }
       - { run:    '{{ helios_command }} status --job "{{ helios.docker.nginx.job }}"',
           expect: [ '{{ helios.docker.nginx.job }}', '{{ agent }}.    START    RUNNING' ]}
       - { run:    '{{ helios_command }} status --host "{{ agent }}"',
