--- a/playbooks/utils/register.yml
+++ b/playbooks/utils/register.yml
@@ -1,23 +1,24 @@
 ---
-# ---------------------------------------------------------
-# Called by other roles to register a host with SkyDNS
-# ---------------------------------------------------------
-- debug: msg="Sending registration request to '{{ etcd_host }}' for '{{ host }}' => '{{ ip }}'"
-- debug: msg="etcd_port = '{{ etcd_port }}'"
-- debug: msg="skydns_host = '{{ skydns_host }}'"
+# -----------------------------------------------------------------
+#   Called by other roles to register a host with SkyDNS via etcd
+# -----------------------------------------------------------------
+- debug:
+    msg: "Sending registration request to '{{ etcd_host }}:{{ etcd_port }}': '{{ src }}' => '{{ dest }}'"
 
-- set_fact: registration_url="http://{{ etcd_host }}:{{ etcd_port }}/v2/keys/skydns/{{ '/'.join( host.split( '.' )[::-1] ) }}"
+- fail: "Registration src '{{ src }}' should end with '.{{ domain }}'"
+  when: not src.endswith( ".{{ domain }}" )
 
+# https://github.com/skynetservices/skydns
 # https://github.com/ansible/ansible-modules-core/issues/265
-# uri:
-#   method:  PUT
-#   url:     "{{ registration_url }}"
-#   body:    "{ 'host' : '{{ ip }}' }"
-#   timeout: 3
+- set_fact:
+    registration_url: "http://{{ etcd_host }}:{{ etcd_port }}/v2/keys/skydns/{{ '/'.join( src.split('.')[::-1] ) }}"
+- set_fact:
+    registration_command: "curl -XPUT '{{ registration_url }}' -d value='{\"host\":\"{{ dest }}\",\"port\":{{ port | default(0) }}}'"
 
 - include: "{{ common.utils.run }}"
   vars:
-    title: Registration checks
+    title: registration '{{ src }}' => '{{ dest }}'
     commands:
-      - { run: "curl -XPUT '{{ registration_url }}' -d value='{\"host\":\"{{ ip }}\"}'" }
-      - { run: "dig @{{ skydns_host }} '{{ host }}'", expect: '{{ host }}.	3600	IN	A	{{ ip }}' }
+      - { run:    "{{ registration_command }}" }
+      - { run:    "dig '@{{ etcd_host }}' '{{ src }}'",
+          expect: '^{{ src }}.\s+3600\s+IN\s+\w+\s+{{ dest }}\.?$' }
