--- a/playbooks/utils/run.yml
+++ b/playbooks/utils/run.yml
@@ -8,7 +8,7 @@
   when: not (( commands is defined ) or ( command is defined ))
 
 - set_fact:
-    use_shell: "{{ commands | default([ command ]) | contains( '|' ) }}"
+    use_shell: "{{ commands | default([ command ]) | map( attribute = 'run' ) | list | contains( '|' ) }}"
 
 - name: Running commands with bash
   command:     "{{ ubuntu.bash }} -c '{{ item.run | escape_quotes }} 2>&1'"
