Helios role - verifying SRV record after deploying a test Nginx job

--- a/playbooks/roles/helios/tasks/agent.yml
+++ b/playbooks/roles/helios/tasks/agent.yml
@@ -37,4 +37,4 @@
   service: name=helios-agent state=started enabled=yes
 
 - pause:   seconds=5
-- include: verify-helios.yml agent={{ agent_name }}
+- include: verify-helios.yml master={{ helios_master }} agent={{ agent_name }}
