--- a/playbooks/roles/helios/tasks/verify-helios.yml
+++ b/playbooks/roles/helios/tasks/verify-helios.yml
@@ -43,8 +43,10 @@
           expect: [ '{{ helios.docker.nginx.job }}', '{{ agent }}.    START    RUNNING' ]}
       - { run:    docker ps,
           expect: [ 'nginx', 'seconds ago', ' Up ', '443/tcp, 0.0.0.0:{{ helios.docker.nginx.port }}->80/tcp' ]}
+      - { run:    "dig '@{{ master }}' 'nginx.http.{{ domain }}' SRV",
+          expect: '^nginx.http.{{ domain }}\.\s+\d+\s+IN\s+SRV\s+\d+\s+\d+\s+{{ helios.docker.nginx.port }}\s+{{ agent }}.$' }
+      - { run:    "host -t SRV 'nginx.http.{{ domain }}' '{{ master }}'",
+          expect: '^nginx.http.{{ domain }} has SRV record \d+ \d+ {{ helios.docker.nginx.port }} {{ agent }}.$' }
       - { run:    'curl -s http://localhost:{{ helios.docker.nginx.port }}',
           expect: [ 'Welcome to nginx!', 'Thank you for using nginx.' ]}
-      - { run:    '{{ helios_command }} undeploy --yes "{{ helios.docker.nginx.job }}" "{{ agent }}"',
-          expect: [ 'Undeploying {{ helios.docker.nginx.job }}:', '{{ agent }}: done' ]}
   when: agent is defined
