--- a/playbooks/utils/download.yml
+++ b/playbooks/utils/download.yml
@@ -34,6 +34,8 @@
 - debug: var=env
 - debug: var=env_file
 - debug: var=run_env
+- debug: var=tests
+- debug: var=cleanup
 
 - debug: msg="Downloading {{ title }} - '{{ url }}' => '{{ archive }}'"
   when:  download|bool and ( not unpack|bool )
