--- a/playbooks/roles/docker/tasks/start.yml
+++ b/playbooks/roles/docker/tasks/start.yml
@@ -7,7 +7,8 @@
 
 # [ port1, port2, port3 ] => "-p port1:port1 -p port2:port1 -p port3:port3"
 - name:     Setting Docker ports
-  set_fact: docker_ports="{{ ports | transform( "-p {0}:{0}" ) | join( ' ' ) }}"
+  set_fact:
+    docker_ports: "{{ ports | transform( 'lambda port: \"-p {0}:{0}\".format(port)' ) | join( ' ' ) }}"
   when:     ports is defined
 
 - set_fact: env_file="/opt/{{ name }}.env"
